# Prog-II-Chess

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md  Util.h  main  main.cpp
.github/: dependabot.yml
.github/workflows/: scorecard.yml  scorecard2.yml  scorecards.yml
Board/: Board.cpp  Board.h
ChessPiece/: ChessPiece.h
ChessPiece/Bishop/: Bishop.cpp  Bishop.h
ChessPiece/King/: King.cpp  King.h
ChessPiece/Knight/: Knight.cpp  Knight.h
ChessPiece/Pawn/: Pawn.cpp  Pawn.h
ChessPiece/Queen/: Queen.cpp  Queen.h
ChessPiece/Rook/: Rook.cpp  Rook.h
